--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol class="pokemons">
+        <ol id="pokemonList" class="pokemons">
             <li class="pokemon">
                 <span class="number">#001</span>
                 <span class="name">Bulbasaur</span>
@@ -36,12 +36,13 @@
 
                     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
                 </div>
-                
             </li>
+            <!-- Pokemons Aqui -->
         </ol>
     </section>
 
-    <!-- Nosso JS -->
+    <!-- Nossos JS -->
+    <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
