--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <ol id="pokemonList" class="pokemons">
             <!-- Pokemons Aqui -->
         </ol>
+
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">
+                Load More
+            </button>
+        </div>
+        
     </section>
 
     <!-- Nossos JS -->
